add chrome extension and github links

--- a/public/blah.html
+++ b/public/blah.html
@@ -27,6 +27,16 @@
 
       <button class="btn btn-default" type="submit" ng-click="queueCtrl.clear()">Clear</button>
       <button class="btn btn-default" type="submit" ng-click="queueCtrl.status()">Status</button>
+      <span>
+        For Spotify playback support install the
+        <a href="//chrome.google.com/webstore/detail/spotify-remote/boidmjchelicgoeabcpblhboklbillbi">
+          spotify remote
+        </a>
+        extension.
+      </span>
+      <span>
+        <a href="//github.com/theyelllowdart/consensus">GitHub</a>
+      </span>
     </div>
   </div>
 
