--- a/public/blah.html
+++ b/public/blah.html
@@ -22,9 +22,9 @@
       </div>
     </div>
 
-    <div class="row" style="padding: 10px 0;white-space: nowrap;overflow-y: scroll;min-height: 150px;">
-      <div ng-repeat="song in queueCtrl.queue" style="display: inline-block">
-        <div class="col-xs-3" style="height: 100px;">
+    <div id="queue" class="row">
+      <div ng-repeat="song in queueCtrl.queue">
+        <div class="col-xs-3">
           <div hidden>{{song.id}}</div>
           <div hidden>{{song.url}}</div>
           <div ng-switch="song.source">
@@ -79,9 +79,9 @@
 
       <div id="soundcloud-results" class="col-xs-4">
         <blockquote>SoundCloud</blockquote>
-        <div ng-repeat="result in searchCtrl.soundCloudResults" class="row">
-          <div class="col-xs-12" ng-click="searchCtrl.enqueueSC(result)" style="margin-bottom: 5px; cursor: pointer;">
-            <img ng-src="{{result.artwork_url || result.user.avatar_url}}" style="float: left; margin-right: 5px;"/>
+        <div ng-repeat="result in searchCtrl.soundCloudResults" class="row search-result">
+          <div class="col-xs-12" ng-click="searchCtrl.enqueueSC(result)">
+            <img ng-src="{{result.artwork_url || result.user.avatar_url}}" class="search-result-image"/>
 
             <div>{{result.user.username}}</div>
             <div>{{result.title}}</div>
@@ -93,12 +93,9 @@
 
       <div id="youtube-results" class="col-xs-4">
         <blockquote>Youtube</blockquote>
-        <div ng-repeat="result in searchCtrl.youtubeResults" class="row">
-          <div class="col-xs-12" ng-click="searchCtrl.enqueueYT(result)"
-               style="min-height: 100px; margin-bottom: 5px; cursor: pointer;">
-            <img ng-src="{{result.snippet.thumbnails.default.url}}" style="float: left; margin-right: 5px;"
-                 height="100"/>
-
+        <div ng-repeat="result in searchCtrl.youtubeResults" class="row search-result">
+          <div class="col-xs-12" ng-click="searchCtrl.enqueueYT(result)">
+            <img ng-src="{{result.snippet.thumbnails.default.url}}" class="search-result-image"/>
             <div>{{result.snippet.channelTitle}}</div>
             <div>{{result.snippet.title}}</div>
             <div><a href="//youtube.com/watch?v={{result.id.videoId}}" target="_blank" ng-click="$event.stopPropagation();">link</a></div>
@@ -108,11 +105,9 @@
 
       <div id="spotify-results" class="col-xs-4">
         <blockquote>Spotify</blockquote>
-        <div ng-repeat="result in searchCtrl.spotifyResults" class="row">
-          <div class="col-xs-12" ng-click="searchCtrl.enqueueSpotify(result)"
-               style="min-height: 100px; margin-bottom: 5px; cursor: pointer;">
-            <img ng-src="{{result.album.images[1].url}}" style="float: left; margin-right: 5px;" height="100"/>
-
+        <div ng-repeat="result in searchCtrl.spotifyResults" class="row search-result">
+          <div class="col-xs-12" ng-click="searchCtrl.enqueueSpotify(result)">
+            <img ng-src="{{result.album.images[1].url}}" class="search-result-image"/>
             <div>{{result.album.name}}</div>
             <div>{{result.artists[0].name}} - {{result.name}}</div>
             <div>{{result.duration_ms | humanizeDuration}}</div>
