please the intellij god by hiding generated content a directory

--- a/public/blah.html
+++ b/public/blah.html
@@ -4,11 +4,11 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <script src="output.js" defer></script>
+  <script src="generated/output.js" defer></script>
   <script src="//www.youtube.com/iframe_api" defer></script>
 
   <link rel="icon" href="favicon.ico"/>
-  <link rel="stylesheet" type="text/css" href="output.css">
+  <link rel="stylesheet" type="text/css" href="generated/output.css">
 </head>
 <body class="ng-cloak" hidden>
 <div class="container-fluid">
