--- a/public/blah.html
+++ b/public/blah.html
@@ -65,8 +65,8 @@
     <div class="row">
       <div class="col-xs-12">
         <form>
-          <label for="search"> Search</label> {{searchCtrl.search()}}
           <input type="text"
+                 placeholder="Search for a track"
                  class="form-control"
                  id="search"
                  ng-model="searchCtrl.search"
