--- a/public/blah.html
+++ b/public/blah.html
@@ -86,7 +86,7 @@
             <div>{{result.user.username}}</div>
             <div>{{result.title}}</div>
             <div>{{result.duration | humanizeDuration}}</div>
-            <div><a href="{{result.permalink_url}}" target="_blank">link</a></div>
+            <div><a href="{{result.permalink_url}}" target="_blank" ng-click="$event.stopPropagation();">link</a></div>
           </div>
         </div>
       </div>
@@ -101,7 +101,7 @@
 
             <div>{{result.snippet.channelTitle}}</div>
             <div>{{result.snippet.title}}</div>
-            <div><a href="//youtube.com/watch?v={{result.id.videoId}}" target="_blank">link</a></div>
+            <div><a href="//youtube.com/watch?v={{result.id.videoId}}" target="_blank" ng-click="$event.stopPropagation();">link</a></div>
           </div>
         </div>
       </div>
@@ -116,7 +116,7 @@
             <div>{{result.album.name}}</div>
             <div>{{result.artists[0].name}} - {{result.name}}</div>
             <div>{{result.duration_ms | humanizeDuration}}</div>
-            <div><a href="{{result.external_urls.spotify}}" target="_blank">link</a></div>
+            <div><a href="{{result.external_urls.spotify}}" target="_blank" ng-click="$event.stopPropagation();">link</a></div>
           </div>
         </div>
       </div>
