--- a/public/blah.html
+++ b/public/blah.html
@@ -19,6 +19,7 @@
         <label class="checkbox-inline">
           <input type="checkbox" ng-model="queueCtrl.state.listening" ng-change="queueCtrl.listen()"> Listen
         </label>
+        <a href="/history">View Song History</a>
       </div>
     </div>
 
