--- a/public/blah.html
+++ b/public/blah.html
@@ -10,73 +10,15 @@
   <link rel="icon" href="favicon.ico"/>
   <link rel="stylesheet" type="text/css" href="generated/output.css">
 </head>
+
+
 <body class="ng-cloak" hidden>
 
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <div class="navbar-header">
-        <span class="navbar-brand">
-          Consensus
-        </span>
-    </div>
-  </div>
-</nav>
-
-
 <div class="container-fluid">
+  <div class="row row-eq-height">
 
-  <div ng-controller="QueueController as queueCtrl">
-    <div class="row">
-      <div class="col-xs-12">
-        <label class="checkbox-inline">
-          <input type="checkbox" ng-model="queueCtrl.state.listening" ng-change="queueCtrl.listen()"> Listen
-        </label>
-        <a href="/history">View Song History</a>
-      </div>
-    </div>
-
-    <div id="queue" class="row">
-      <div ng-repeat="song in queueCtrl.queue">
-        <div class="col-xs-3">
-          <div hidden>{{song.id}}</div>
-          <div hidden>{{song.url}}</div>
-          <div ng-switch="song.source">
-            <span ng-switch-when="0">SoundCloud</span>
-            <span ng-switch-when="1">YouTube</span>
-            <span ng-switch-when="2">Spotify</span>
-          </div>
-          <div>{{song.name}}</div>
-          <div>{{song.creator}}</div>
-          <button type="button"
-                  class="btn btn-default"
-                  ng-click="queueCtrl.upvote(song.id)"
-                  bs-tooltip
-                  data-title="wtf"
-                  data-container="body"
-                  data-content-template="upvotes.html">
-            upvote
-            <span class="badge">{{song.upvotes.length}}</span>
-          </button>
-          <button type="button"
-                  class="btn btn-default"
-                  ng-click="queueCtrl.downvote(song.id)">
-            downvote
-            <span class="badge">{{song.downvotes.length}}</span>
-          </button>
-          <div ng-show="$first">
-            progress: {{queueCtrl.playState.progress}}
-          </div>
-        </div>
-      </div>
-    </div>
-
-  </div>
-
-
-  <div ng-controller="SearchController as searchCtrl">
-
-    <div class="row">
-      <div class="col-xs-12">
+    <div class="col-xs-9">
+      <div ng-controller="SearchController as searchCtrl">
         <form>
           <input type="text"
                  placeholder="Search for a track"
@@ -85,49 +27,102 @@
                  ng-model="searchCtrl.search"
                  ng-model-options="{getterSetter: true, updateOn: 'default', debounce: {'default': 200}}"/>
         </form>
+
+        <div id="results" class="row">
+          <div id="soundcloud-results" class="col-xs-4">
+            <blockquote>SoundCloud</blockquote>
+            <div ng-repeat="result in searchCtrl.soundCloudResults" class="row search-result">
+              <div class="col-xs-12" ng-click="searchCtrl.enqueueSC(result)">
+                <img ng-src="{{result.artwork_url || result.user.avatar_url}}" class="search-result-image"/>
+
+                <div class="deemphasize">{{result.user.username}}</div>
+                <div>{{result.title}}</div>
+                <div>{{result.duration | humanizeDuration}}</div>
+                <div><a href="{{result.permalink_url}}" target="_blank" ng-click="$event.stopPropagation();">link</a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div id="youtube-results" class="col-xs-4">
+            <blockquote>Youtube</blockquote>
+            <div ng-repeat="result in searchCtrl.youtubeResults" class="row search-result">
+              <div class="col-xs-12" ng-click="searchCtrl.enqueueYT(result)">
+                <img ng-src="{{result.snippet.thumbnails.default.url}}" class="search-result-image"/>
+
+                <div class="deemphasize">{{result.snippet.channelTitle}}</div>
+                <div>{{result.snippet.title}}</div>
+                <div><a href="//youtube.com/watch?v={{result.id.videoId}}" target="_blank"
+                        ng-click="$event.stopPropagation();">link</a></div>
+              </div>
+            </div>
+          </div>
+
+          <div id="spotify-results" class="col-xs-4">
+            <blockquote>Spotify</blockquote>
+            <div ng-repeat="result in searchCtrl.spotifyResults" class="row search-result">
+              <div class="col-xs-12" ng-click="searchCtrl.enqueueSpotify(result)">
+                <img ng-src="{{result.album.images[1].url}}" class="search-result-image"/>
+
+                <div class="deemphasize">{{result.album.name}}</div>
+                <div>{{result.artists[0].name}} - {{result.name}}</div>
+                <div>{{result.duration_ms | humanizeDuration}}</div>
+                <div><a href="{{result.external_urls.spotify}}" target="_blank"
+                        ng-click="$event.stopPropagation();">link</a></div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
 
-    <div id="results" class="row">
+    <div id="queue" class="col-xs-3">
+      <div ng-controller="QueueController as queueCtrl">
+        <div class="row">
+          <div class="col-xs-12">
+            <h3>Queue</h3>
+            <label class="checkbox-inline">
+              <input type="checkbox" ng-model="queueCtrl.state.listening" ng-change="queueCtrl.listen()"> Listen
+            </label>
+            <a href="/history">View Song History</a>
+          </div>
+        </div>
 
-      <div id="soundcloud-results" class="col-xs-4">
-        <blockquote>SoundCloud</blockquote>
-        <div ng-repeat="result in searchCtrl.soundCloudResults" class="row search-result">
-          <div class="col-xs-12" ng-click="searchCtrl.enqueueSC(result)">
-            <img ng-src="{{result.artwork_url || result.user.avatar_url}}" class="search-result-image"/>
-            <div class="deemphasize">{{result.user.username}}</div>
-            <div>{{result.title}}</div>
-            <div>{{result.duration | humanizeDuration}}</div>
-            <div><a href="{{result.permalink_url}}" target="_blank" ng-click="$event.stopPropagation();">link</a></div>
+        <div ng-repeat="song in queueCtrl.queue">
+          <div class="row">
+            <div class="col-xs-12">
+              <div hidden>{{song.id}}</div>
+              <div hidden>{{song.url}}</div>
+              <div ng-switch="song.source">
+                <span ng-switch-when="0">SoundCloud</span>
+                <span ng-switch-when="1">YouTube</span>
+                <span ng-switch-when="2">Spotify</span>
+              </div>
+              <div>{{song.name}}</div>
+              <div>{{song.creator}}</div>
+              <button type="button"
+                      class="btn btn-default"
+                      ng-click="queueCtrl.upvote(song.id)"
+                      bs-tooltip
+                      data-title="wtf"
+                      data-container="body"
+                      data-content-template="upvotes.html">
+                upvote
+                <span class="badge">{{song.upvotes.length}}</span>
+              </button>
+              <button type="button"
+                      class="btn btn-default"
+                      ng-click="queueCtrl.downvote(song.id)">
+                downvote
+                <span class="badge">{{song.downvotes.length}}</span>
+              </button>
+              <div ng-show="$first">
+                progress: {{queueCtrl.playState.progress}}
+              </div>
+            </div>
           </div>
         </div>
       </div>
-
-      <div id="youtube-results" class="col-xs-4">
-        <blockquote>Youtube</blockquote>
-        <div ng-repeat="result in searchCtrl.youtubeResults" class="row search-result">
-          <div class="col-xs-12" ng-click="searchCtrl.enqueueYT(result)">
-            <img ng-src="{{result.snippet.thumbnails.default.url}}" class="search-result-image"/>
-            <div class="deemphasize">{{result.snippet.channelTitle}}</div>
-            <div>{{result.snippet.title}}</div>
-            <div><a href="//youtube.com/watch?v={{result.id.videoId}}" target="_blank" ng-click="$event.stopPropagation();">link</a></div>
-          </div>
-        </div>
-      </div>
-
-      <div id="spotify-results" class="col-xs-4">
-        <blockquote>Spotify</blockquote>
-        <div ng-repeat="result in searchCtrl.spotifyResults" class="row search-result">
-          <div class="col-xs-12" ng-click="searchCtrl.enqueueSpotify(result)">
-            <img ng-src="{{result.album.images[1].url}}" class="search-result-image"/>
-            <div class="deemphasize">{{result.album.name}}</div>
-            <div>{{result.artists[0].name}} - {{result.name}}</div>
-            <div>{{result.duration_ms | humanizeDuration}}</div>
-            <div><a href="{{result.external_urls.spotify}}" target="_blank" ng-click="$event.stopPropagation();">link</a></div>
-          </div>
-        </div>
-      </div>
-
     </div>
 
   </div>
@@ -148,20 +143,6 @@
 <div hidden>
   <div id="player"></div>
 </div>
-
-
-<footer class="footer">
-  <span>
-    For Spotify playback support install the
-    <a href="//chrome.google.com/webstore/detail/spotify-remote/boidmjchelicgoeabcpblhboklbillbi">
-      spotify remote
-    </a>
-    extension.
-  </span>
-  <span>
-    <a href="//github.com/theyelllowdart/consensus">GitHub</a>
-  </span>
-</footer>
 
 </body>
 </html>
