--- a/public/blah.html
+++ b/public/blah.html
@@ -11,6 +11,18 @@
   <link rel="stylesheet" type="text/css" href="generated/output.css">
 </head>
 <body class="ng-cloak" hidden>
+
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <div class="navbar-header">
+        <span class="navbar-brand">
+          Consensus
+        </span>
+    </div>
+  </div>
+</nav>
+
+
 <div class="container-fluid">
 
   <div ng-controller="QueueController as queueCtrl">
