--- a/public/blah.html
+++ b/public/blah.html
@@ -38,7 +38,7 @@
                 <div class="deemphasize">{{result.user.username}}</div>
                 <div>{{result.title}}</div>
                 <div>{{result.duration | humanizeDuration}}</div>
-                <div><a href="{{result.permalink_url}}" target="_blank" ng-click="$event.stopPropagation();">link</a>
+                <div><a ng-href="{{result.permalink_url}}" target="_blank" ng-click="$event.stopPropagation();">link</a>
                 </div>
               </div>
             </div>
@@ -52,7 +52,7 @@
 
                 <div class="deemphasize">{{result.snippet.channelTitle}}</div>
                 <div>{{result.snippet.title}}</div>
-                <div><a href="//youtube.com/watch?v={{result.id.videoId}}" target="_blank"
+                <div><a ng-href="//youtube.com/watch?v={{result.id.videoId}}" target="_blank"
                         ng-click="$event.stopPropagation();">link</a></div>
               </div>
             </div>
@@ -67,7 +67,7 @@
                 <div class="deemphasize">{{result.album.name}}</div>
                 <div>{{result.artists[0].name}} - {{result.name}}</div>
                 <div>{{result.duration_ms | humanizeDuration}}</div>
-                <div><a href="{{result.external_urls.spotify}}" target="_blank"
+                <div><a ng-href="{{result.external_urls.spotify}}" target="_blank"
                         ng-click="$event.stopPropagation();">link</a></div>
               </div>
             </div>
@@ -91,14 +91,19 @@
         <div ng-repeat="song in queueCtrl.queue">
           <div class="row">
             <div class="col-xs-12">
-              <div hidden>{{song.id}}</div>
-              <div hidden>{{song.url}}</div>
               <div ng-switch="song.source">
                 <span ng-switch-when="0">SoundCloud</span>
                 <span ng-switch-when="1">YouTube</span>
                 <span ng-switch-when="2">Spotify</span>
               </div>
+
+              <img ng-src="{{song.artwork}}" class="search-result-image"/>
+              <div class="deemphasize">{{song.subtitle}}</div>
               <div>{{song.name}}</div>
+              <div>{{song.duration | humanizeDuration}}</div>
+              <div>
+                <a ng-href="{{song.trackLink}}" target="_blank" ng-click="$event.stopPropagation();">link</a>
+              </div>
               <div>{{song.creator}}</div>
               <button type="button"
                       class="btn btn-default"
