no need for a src attribute

--- a/public/blah.html
+++ b/public/blah.html
@@ -181,7 +181,7 @@
   <div ng-hide="song.downvotes.length">No downvotes</div>
 </script>
 
-<iframe id="spotify-player" src="#" hidden></iframe>
+<iframe id="spotify-player" hidden></iframe>
 <div hidden>
   <div id="player"></div>
 </div>
