--- a/public/blah.html
+++ b/public/blah.html
@@ -181,8 +181,8 @@
   <div ng-hide="song.downvotes.length">No downvotes</div>
 </script>
 
-<iframe id="spotify-player" hidden></iframe>
 <div hidden>
+  <div id="spotify-player"></div>
   <div id="player"></div>
 </div>
 
