--- a/public/blah.html
+++ b/public/blah.html
@@ -183,7 +183,7 @@
 
 <div hidden>
   <div id="spotify-player"></div>
-  <div id="player"></div>
+  <div id="youtube-player"></div>
 </div>
 
 </body>
