--- a/public/blah.html
+++ b/public/blah.html
@@ -105,7 +105,7 @@
             <label class="checkbox-inline">
               <input type="checkbox" ng-model="queueCtrl.state.listening" ng-change="queueCtrl.listen()"> Listen
             </label>
-            <a href="/history">
+            <a href="history">
               <span>(Show History)</span>
             </a>
           </div>
