--- a/public/blah.html
+++ b/public/blah.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="consensus" data-framework="typescript">
+<html lang="en" data-framework="typescript">
 <head>
   <base href="/"/>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <script src="generated/output.js" defer></script>
-  <script src="//www.youtube.com/iframe_api" defer></script>
+  <script data-main="generated/build/YouTubeIFrame.js" src="generated/js/require.js"></script>
 
   <link rel="icon" href="favicon.ico"/>
   <link rel="stylesheet" type="text/css" href="generated/output.css">
