--- a/public/blah.html
+++ b/public/blah.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-framework="typescript">
+<html lang="en" data-framework="typescript" ng-app="consensus">
 <head>
   <base href="/"/>
   <meta charset="utf-8">
@@ -12,7 +12,7 @@
 </head>
 
 
-<body class="ng-cloak" hidden>
+<body class="ng-cloak">
 
 <div class="container-fluid">
   <div class="row row-eq-height">
