remove crazy layout in favor of smoother progress bar

--- a/public/blah.html
+++ b/public/blah.html
@@ -131,7 +131,7 @@
               </div>
               <div ng-show="$first">
                 <div class="progress" style="margin-top: 5px; margin-bottom: 2px;">
-                  <div class="progress-bar" style="width:{{queueCtrl.playState.progress}}%"></div>
+                  <div id="progress-bar" style="width:{{queueCtrl.playState.progress}}%"></div>
                 </div>
               </div>
               <div>
